[project]
name = "dailylog-lib"
version = "0.1.0"
description = ""
authors = [
    {name = "Quien Sabe",email = "qs5579@mail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "dailylog_lib", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
